<resources>
    <string name="app_name">Zoo_clinic</string>
    <string name="dantists">Доступные стоматологи</string>
    <string name="dantsit1">Иванова И.И.</string>
    <string name="dantsit2">Борисов Б.Б.</string>
    <string name="dantsit3">Кирилов К.К.</string>
    <string name="ter">Доступные терапевты</string>
    <string name="ter1">Мельник А.А.</string>
    <string name="ter2">Кузнецов Б.Б.</string>
    <string name="ter3">Кузнечиков И.К.</string>
    <string name="par">Доступные паразитологи</string>
    <string name="par1">Василькова М.А.</string>
    <string name="par2">Ромашкова А.М.</string>
    <string name="heart">Доступные кардиологи</string>
    <string name="heart1">Максимов Б.Е.</string>
    <string name="heart2">Егоров А.М.</string>
    <string name="cancer">Доступные онкологи</string>
    <string name="cancer1">Родзаевский К.А.</string>
    <string name="cancer2">Петлин Н.С.</string>

    //Часть для инфы о докторах
    <string name="text_dantsit1">Текст о Иванова И.И.</string>
    <string name="text_dantsit2">Текст о Борисов Б.Б.</string>
    <string name="text_dantsit3">Текст о Кирилов К.К.</string>
    <string name="text_ter1">Текст о Мельник А.А.</string>
    <string name="text_ter2">Текст о Кузнецов Б.Б.</string>
    <string name="text_ter3">Текст о Кузнечиков И.К.</string>
    <string name="text_par1">Текст о Василькова М.А.</string>
    <string name="text_par2">Текст о Ромашкова А.М.</string>
    <string name="text_heart1">Текст о Максимов Б.Е.</string>
    <string name="text_heart2">Текст о Егоров А.М.</string>
    <string name="text_cancer1">Текст о Родзаевский К.А.</string>
    <string name="text_cancer2">Текст о Петлин Н.С.</string>

    //Записи о врачах
    <string name="enroll_dantsit1">Запись к стоматологу Иванова И.И.</string>

    //Для выбора записи
    <string-array name="dates" textSize="24sp" >
        <item>05-09 Декабря 2022</item>
        <item>12-16 Декабря 2022</item>
        <item>19-23 Декабря 2022</item>
    </string-array>

    //Для кастомного календаря
    <string name="calendar_0509">05-09</string>
    <string name="calendar_1216">12-16</string>
    <string name="calendar_1923">19-23</string>
    <string name="calendar_mon">Пон</string>
    <string name="calendar_vt">Вт</string>
    <string name="calendar_sr">Ср</string>
    <string name="calendar_cht">Чт</string>
    <string name="calendar_fr">Пт</string>
</resources>